--- a/index.html
+++ b/index.html
@@ -1,1 +1,55 @@
-Hallo11
+<!DOCTYPE html>
+<html lang="de">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>EEG Mayer Strom</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 0;
+            text-align: center;
+        }
+        header {
+            background-color: #2c3e50;
+            color: white;
+            padding: 30px;
+        }
+        .logo {
+            font-size: 3em;
+            font-weight: bold;
+            letter-spacing: 5px;
+            color: #3498db; /* Blau für das Logo */
+            text-transform: uppercase;
+        }
+        .slogan {
+            font-size: 1.2em;
+            color: #ecf0f1;
+            margin-top: 10px;
+        }
+        footer {
+            background-color: #2c3e50;
+            color: white;
+            padding: 20px;
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+            text-align: center;
+        }
+    </style>
+</head>
+<body>
+
+    <header>
+        <div class="logo">
+            EEG Mayer Strom
+        </div>
+        <div class="slogan">
+            Energie für die Zukunft
+        </div>
+    </header>
+
+    <footer>
+        <p>&copy; 2025 EEG Mayer Strom | Alle
